--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           </div>
         </div>
     </section>
-    <footer class="page-footer font-small stylish-color-dark pt-4">
+    <footer class="pt-4">
       <div class="container text-center text-md-left">
         <div class="row">
           <div class="col-md-4 mx-auto m-5">
@@ -257,7 +257,7 @@
               adipisicing elit.</p>
           </div>
          
-          <div class="col-md-2 mx-auto">
+          <div class="col-md-2 ">
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Courses</h5>
             <ul class="list-unstyled">
               <li>
@@ -278,7 +278,7 @@
             </ul>
           </div>
          
-          <div class="col-md-2 mx-auto">
+          <div class="col-md-2">
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Courses</h5>
             <ul class="list-unstyled">
               <li>
@@ -303,19 +303,19 @@
             <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Courses</h5>
             <ul class="list-unstyled">
               <li>
-                <a href="#!">Graphic Design</a>
+                <a href="#">Graphic Design</a>
               </li>
               <li>
-                <a href="#!">Web Design</a>
+                <a href="#">Web Design</a>
               </li>
               <li>
-                <a href="#!">Business</a>
+                <a href="#">Business</a>
               </li>
               <li>
-                <a href="#!">Marketting</a>
+                <a href="#">Marketting</a>
               </li>
               <li>
-                <a href="#!">Engeneering</a>
+                <a href="#">Engeneering</a>
               </li>
             </ul>
           </div>
